--- a/style.css
+++ b/style.css
@@ -13,5 +13,5 @@ body {
 #canvas1 {
     width: 800px;    /* Canvas size */
     height: 500px;
-    border: 4px solid black;    
+    border: 4px solid rgb(0, 0, 0);    
 }
