--- a/style.css
+++ b/style.css
@@ -14,4 +14,10 @@ body {
     width: 800px;    /* Canvas size */
     height: 500px;
     border: 4px solid rgb(0, 0, 0);    
+    background: linear-gradient(
+        to bottom, 
+        lightblue, 
+        darkblue, 
+        black
+    );
 }
